--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-	<body style="background-color:#81c9e3;">
+	<!-- <body style="background-color:#81c9e3;"> -->
+
+		<body style="background-color:#5bd66e;">
+		</body>
 		<h1>DevOps by Varun </h1>
 
 		<h2>K8s  by Varun </h2>
