--- a/docker/index.html
+++ b/docker/index.html
@@ -2,13 +2,13 @@
 <html>
 	<!-- <body style="background-color:#81c9e3;"> -->
 
-		<body style="background-color:#5bd66e;">
+		<body style="background-color:#5bd66e;"> 
 		</body>
 		<h1>DevOps by Varun </h1>
 
 		<h2>K8s  by Varun </h2>
 		
-		<h1>version 1 Blue </h1>
+		<h1>version 2 Green </h1>
 
 
 		<p>Kubernetes Deployment </p>
